o11y-consultant-dataload-lab-1/aws-data-load-lab/kubeinvaders-deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
    meta.helm.sh/release-name: kubeinvaders
    meta.helm.sh/release-namespace: kubeinvaders
  creationTimestamp: "2025-06-23T18:08:51Z"
  generation: 4
  labels:
    app.kubernetes.io/instance: kubeinvaders
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeinvaders
    helm.sh/chart: kubeinvaders-1.9.7
  name: kubeinvaders
  namespace: kubeinvaders
  resourceVersion: "15633546"
  uid: bed9bc6b-ba1c-4567-b58a-fcb48ea1e159
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: kubeinvaders
      app.kubernetes.io/name: kubeinvaders
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-06-27T00:02:21+05:30"
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: kubeinvaders
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: kubeinvaders
    spec:
      containers:
      - env:
        - name: APPLICATION_URL
          value: kubeinvaders.local
        - name: NAMESPACE
          value: namespace1,namespace2
        - name: ALIENPROXIMITY
          value: "10"
        - name: HITSLIMIT
          value: "1"
        - name: UPDATETIME
          value: "0.5"
        - name: DISABLE_TLS
          value: "true"
        image: luckysideburn/kubeinvaders:latest
        imagePullPolicy: Always
        name: kubeinvaders
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: kubeinvaders
      serviceAccountName: kubeinvaders
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-06-23T18:08:53Z"
    lastUpdateTime: "2025-06-23T18:08:53Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-06-23T18:08:51Z"
    lastUpdateTime: "2025-06-26T18:32:24Z"
    message: ReplicaSet "kubeinvaders-57f5978577" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
