o11y-consultant-dataload-lab-1/aws-data-load-lab/kubeinvaders-deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "15"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"14","meta.helm.sh/release-name":"kubeinvaders","meta.helm.sh/release-namespace":"kubeinvaders"},"creationTimestamp":"2025-05-06T00:00:13Z","generation":15,"labels":{"app.kubernetes.io/instance":"kubeinvaders","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"kubeinvaders","helm.sh/chart":"kubeinvaders-1.9.7"},"name":"kubeinvaders","namespace":"kubeinvaders","resourceV [...]
      meta.helm.sh/release-name: kubeinvaders
      meta.helm.sh/release-namespace: kubeinvaders
    creationTimestamp: "2025-05-06T00:00:13Z"
    generation: 16
    labels:
      app.kubernetes.io/instance: kubeinvaders
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kubeinvaders
      helm.sh/chart: kubeinvaders-1.9.7
    name: kubeinvaders
    namespace: kubeinvaders
    resourceVersion: "11137704"
    uid: a9e51116-2113-431c-afb2-36ae269c6b92
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app.kubernetes.io/instance: kubeinvaders
        app.kubernetes.io/name: kubeinvaders
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2025-05-07T03:48:01+05:30"
          prometheus.io/path: /metrics
          prometheus.io/port: "8080"
          prometheus.io/scrape: "true"
        creationTimestamp: null
        labels:
          app.kubernetes.io/instance: kubeinvaders
          app.kubernetes.io/managed-by: Helm
          app.kubernetes.io/name: kubeinvaders
      spec:
        containers:
        - env:
          - name: APPLICATION_URL
            value: kubeinvaders.local
          - name: NAMESPACE
            value: namespace1,namespace2
          - name: ALIENPROXIMITY
            value: "10"
          - name: HITSLIMIT
            value: "1"
          - name: UPDATETIME
            value: "0.5"
          - name: INSECURE_ENDPOINT
            value: "true"
          image: luckysideburn/kubeinvaders:v1.9.6
          imagePullPolicy: Always
          name: kubeinvaders
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: kubeinvaders
        serviceAccountName: kubeinvaders
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2025-05-07T19:37:40Z"
      lastUpdateTime: "2025-05-07T19:37:40Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2025-05-06T00:00:13Z"
      lastUpdateTime: "2025-06-11T16:34:42Z"
      message: ReplicaSet "kubeinvaders-55b59784cd" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 16
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
