o11y-consultant-dataload-lab-1/aws-data-load-lab/kubeinvaders-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      meta.helm.sh/release-name: kubeinvaders
      meta.helm.sh/release-namespace: kubeinvaders
    creationTimestamp: "2025-05-06T00:00:13Z"
    generation: 1
    labels:
      app.kubernetes.io/instance: kubeinvaders
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kubeinvaders
      helm.sh/chart: kubeinvaders-1.9.7
    name: kubeinvaders
    namespace: kubeinvaders
    resourceVersion: "8527"
    uid: c59b3003-939a-42d1-b7da-3b897d5f9718
  spec:
    ingressClassName: nginx
    rules:
    - host: kubeinvaders.local
      http:
        paths:
        - backend:
            service:
              name: kubeinvaders
              port:
                number: 80
          path: /
          pathType: Prefix
        - path: /metrics
          pathType: Prefix
          backend:
            service:
              name: kubeinvaders
              port:
                number: 80
  status:
    loadBalancer:
      ingress:
      - ip: 139.59.52.11
      - ip: 2400:6180:100:d0::787e:6001
kind: List
metadata:
  resourceVersion: ""
