o11y-consultant-dataload-lab-1/aws-data-load-lab/kubeinvaders-service-1.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"kubernetes.digitalocean.com/load-balancer-id":"e8c42e18-26b3-4a15-b9ce-f5e76868e53e","meta.helm.sh/release-name":"kubeinvaders","meta.helm.sh/release-namespace":"kubeinvaders","prometheus.io/path":"/metrics","prometheus.io/port":"80","prometheus.io/scrape":"true","service.beta.kubernetes.io/do-loadbalancer-type":"REGIONAL"},"creationTimestamp":"2025-05-06T00:00:13Z","finalizers":["service.kubernetes.io/load-balancer-cleanup"], [...]
    kubernetes.digitalocean.com/load-balancer-id: e8c42e18-26b3-4a15-b9ce-f5e76868e53e
    meta.helm.sh/release-name: kubeinvaders
    meta.helm.sh/release-namespace: kubeinvaders
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
    service.beta.kubernetes.io/do-loadbalancer-type: REGIONAL
  creationTimestamp: "2025-05-06T00:00:13Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app.kubernetes.io/instance: kubeinvaders
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeinvaders
    helm.sh/chart: kubeinvaders-1.9.7
  name: kubeinvaders
  namespace: kubeinvaders
  resourceVersion: "10500215"
  uid: 5b34df50-cb1d-4f9c-9829-213befa32296
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.109.9.202
  clusterIPs:
  - 10.109.9.202
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    nodePort: 32344
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: kubeinvaders
    app.kubernetes.io/name: kubeinvaders
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 152.42.158.255
      ipMode: VIP
    - ip: 2400:6180:100:d0::78d9:a001
      ipMode: VIP
