o11y-consultant-dataload-lab-1/aws-data-load-lab/kubeinvaders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeinvaders
  namespace: kubeinvaders
  labels:
    app.kubernetes.io/instance: kubeinvaders
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeinvaders
    helm.sh/chart: kubeinvaders-1.9.7
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path: "/metrics"
    meta.helm.sh/release-name: kubeinvaders
    meta.helm.sh/release-namespace: kubeinvaders
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: kubeinvaders
    app.kubernetes.io/name: kubeinvaders
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
